--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,14 +25,9 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
-
 .app {
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: 50vh;
 }
