--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -3,9 +3,8 @@
   width: 100%;
   padding: 0px 16px;
   display: flex;
-  justify-content: start;
-  position: fixed;
-  bottom: 0;
+  justify-content: flex-start;
+  height: 148px;
   span {
     margin-right: 16px;
   }
